e-koolikott/DOP#4 Fixed modal flicker when uploading file.

--- a/front-end/app/styles/dialogs/add-material.scss
+++ b/front-end/app/styles/dialogs/add-material.scss
@@ -44,6 +44,8 @@
   text-align: center;
 }
 
-.uploading-file-progress{
-  margin: 0 auto;
+.upload-file-error{
+  color: rgb(221,44,0);
+  font-size: 12px;
+  text-align: center;
 }
